# GHOST

./: pyproject.toml  run_experiment.py
src/cli/: train.py
src/pbrs/: __init__.py
src/pbrs/agents/: __init__.py  tabular_q.py
src/pbrs/envs/: __init__.py  generators.py  graph_env.py  wrappers.py
src/pbrs/potentials/: __init__.py  base.py  combo.py  distance.py  harmonic.py
src/pbrs/shaping/: __init__.py  reward_wrapper.py
src/pbrs/training/: __init__.py  trainer.py
src/pbrs/utils/: __init__.py  seed.py
tests/: test_distance_potential.py  test_reward_shaper.py
